# little-stuff

./: .gitignore  a.out  ab.py  dcout.cpp  diffusestereo.cpp  drawings.cpp  drawings.hpp  earth_field.m  eyetest.cpp  fibdata.c  fibhowmany  fibhowmany.hs  fibhowmany.py  five.c  flat.m  isostereo.cpp  kalfittest.m  masks.hpp  move.cpp  mult-table.c  pprt.m  pprt2.m  randperm  redblue_asteroids.cpp  redblue_demo.cpp  redblue_happybday.cpp  special-numbers.cpp  special-numbers2.cpp  step-confuse-gen.c  step-confuse.c  temp.c  temp.cpp  tenblock.c  to-qwerty.pl  word-sample.pl
acm-practice/: Biker.java  Hist.java  Merck.java  OneTwo.java  Pancake.java  Young.java  merck-input  pancake-input
adc-tools/: adc-shorten
agda/: #Events.agda#  #Example.java#  #foo3.agda#  #yay.agda#  .#Example.java  ApplicativesWithoutPure.agda  Equality-Things.agda  Events.agda  Events1.agda  Events2.agda  EventsFromIO.agda  EventsFromIO2.agda  EventsFromIO3.agda  EventsFromIO3Test.agda  Example.java  Find.agda  Formats.agda  Functor-Things.agda  FunctorTest.agda  InstanceProblems.agda  InstanceProblems2.agda  InteractiveEvents.agda  NTree.agda  ParamByUPoly.agda  SafeEvents.agda  SaveEvents.agda  StrToNum.agda  Trim.agda  applic.agda  bar.agda  bunches.agda  church.agda  ckt.agda  ckt2-examples.agda  ckt2.agda  ckt3-builder.agda  ckt3-examples.agda  ckt3.agda  co.agda  co2.agda  (+23 more)
agda-ckt/: FlowExp.agda  SimpleIO.agda  Verilog.agda  test.agda
agda-graph/: graph.agda
algebra/: groups-template.cpp  (+5 more)
kde-plasmoid/: CMakeLists.txt  plasma-applet-foo.desktop
kde-plasmoid/src/: Foo.cpp  Foo.hpp
(+815 files in other folders)
